# early-pest-detection

./: README.md  main.py  pyproject.toml
data/raw/: datos_patlachique_procesados.csv
notebooks/: 01_extraccion_datos.ipynb  02_eda_refactorizado.ipynb  03_limpieza_refactorizado.ipynb  04_feature_engineering_refactorizado.ipynb  05_visualizacion_plotly.ipynb  06_modelos_predictivos.ipynb  07_prediccion_hoy.ipynb
reports/: estadisticas_features.csv
