[project]
name = "early-pest-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
