[project]
name = "early-pest-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy-stubs>=1.17.1.3",
    "statsmodels>=0.14.6",
    "xgboost>=3.2.0",
]
